log
Tue 07 May 2024 02:55:50 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0661abb
Tue 07 May 2024 03:06:47 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3c0bfb1
Tue 07 May 2024 03:08:16 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:75: error: expected ‘:’ before ‘}’ token
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1) ? aux->left
      |                                                                           ^
      |                                                                           :
   80 | 
   81 |         }
      |         ~                                                                  
Compilation failed
6c38f25
Tue 07 May 2024 03:08:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:17: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
7150af0
